# marguerite

./: .gitignore  CLAUDE.md  DEMO.md  SPEC.md  TODO.md
app/: models.py
backend/: .gitignore  CLAUDE.md  TODO.md  pyproject.toml  seed.py
backend/app/: database.py  main.py  models.py  pipeline.py
backend/seeds/: stores.json
backend/seeds/store_1/: diffs.json
design/: design.pen
frontend/: CLAUDE.md  README.md  biome.json  eslint.config.js  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/admin/: AdminLayout.tsx  Sidebar.tsx
frontend/src/components/ui/: alert.tsx  button.tsx  card.tsx  dialog.tsx  select.tsx
frontend/src/data/: mock.json
frontend/src/hooks/: useStore.ts
frontend/src/lib/: api.ts
frontend/src/pages/admin/: GenerateConfirmModal.tsx  ImageDetailModal.tsx  QrCodeModal.tsx  RegisterPage.tsx  StoreDashboardPage.tsx  StoreSettingsPage.tsx
frontend/src/pages/play/: GamePage.tsx  LandingPage.tsx  ResultPage.tsx
frontend/src/types/: index.ts
