[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.1",
    "groq>=1.0.0",
    "numpy>=2.4.2",
    "openai>=2.26.0",
    "pillow>=12.1.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.6",
    "requests>=2.32.5",
    "scipy>=1.17.1",
    "sqlmodel>=0.0.37",
    "uvicorn[standard]>=0.41.0",
]
